--- a/src/Styles/sobre.css
+++ b/src/Styles/sobre.css
@@ -6,11 +6,40 @@
 h1{
     font-family: 'Medieval';
     font-size: 40px;
-    font-weight: 300;
-    margin-left: 250px;
+    font-weight: 400;
+    margin-left:250px; 
     margin-top: 60px;
 }
 
 img{
-    margin-left: 360px;
+    margin-left: 380px;
+}
+
+
+
+@media(max-width: 930px){
+    img{
+        margin-left:300px;
+    }
+}
+
+@media(max-width: 720px){
+
+    img{
+        margin-left: 200px;
+    }
+}
+
+@media(max-width: 600px){
+
+    h1{
+        font-size: 25px;
+        text-align: center;
+        margin-left: 20px;
+    }
+
+    img{
+        margin-left: 10px ;
+        width: 400px;
+    }
 }
